# Agent-Memory-Graph

./: README.md  pyproject.toml
agentmemgraph/: __init__.py  __main__.py  cli.py  config.py  graph_manager.py
agentmemgraph/api/: __init__.py  app.py  auth.py  demo.py  dependencies.py  schemas.py
agentmemgraph/api/routes/: demo.py  graphs.py  health.py  inspector.py  memories.py  retrieval.py
agentmemgraph/clients/: __init__.py  embedding.py  llm.py  llm_router.py
agentmemgraph/core/: __init__.py  memory.py  memory_graph.py  value_base.py  value_functions.py
agentmemgraph/inference/: __init__.py  retrieving.py  structuring.py
agentmemgraph/migration/: migrate.py
agentmemgraph/prompts/: __init__.py  reasoning.py  registry.py  retrieving.py  structuring.py
agentmemgraph/storage/: __init__.py  chroma.py
examples/task-adaptation/: hotpotqa.md  longmemeval.md
host_local_inference/: vllm_deploy.sh
openclaw-agentmemgraph-plugin/: ONBOARDING.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-agentmemgraph-plugin/src/: client.ts  config.ts  index.ts  types.ts
openclaw-agentmemgraph-plugin/tests/: client.test.ts  plugin.test.ts
scripts/bench/: README.md  analyze.py  generate_trajectories.py  pricing.yaml  run_tok_usage_bench.py
src/: utils.py
src/eval/hotpotqa/: eval_qa_no_structuring.py
src/memory_reasoning/: prompt_reasoning.py
src/memory_retrieving/: graph_node.py  memory_graph.py
src/webarena_patch/: openai_utils.py
tests/: conftest.py  test_api_graphs.py  test_llm_router.py  test_value_base.py
(+9 files in other folders)
