[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmemgraph"
version = "0.1.0"
description = "Structured long-term memory service for LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "openai>=1.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
local-inference = [
    "torch>=2.1",
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "einops>=0.7",
]

[project.scripts]
agentmemgraph = "agentmemgraph.cli:main"

[tool.setuptools.packages.find]
include = ["agentmemgraph*"]
